--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 /* ====== CONFIG ====== */
 const SHEET_FILE_ID = '1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
 const META_GID      = '254048258';
-const PUBLISHED_META_URL = ''; // se pubblichi la scheda Meta via "Pubblica su web", metti qui l'URL pubhtml
+const PUBLISHED_META_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml'; // se pubblichi la scheda Meta via "Pubblica su web", metti qui l'URL pubhtml
 
 const ROUTES = {
   countdown: 'countdown.html',
