--- a/index.html
+++ b/index.html
@@ -3,117 +3,106 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Matchday – Petriolese Calcio (Live SPA v4)</title>
+<title>Matchday – Petriolese Calcio</title>
 <meta name="color-scheme" content="dark light">
 <style>
   :root{ --bg:#0b0c11; --fg:#e6ebf2; --muted:#9aa3b2; }
-  html,body{height:100%}
-  body{margin:0; background:var(--bg); color:var(--fg); font-family:system-ui,Segoe UI,Roboto,Inter,sans-serif; display:grid; place-items:center}
+  html,body{ height:100%; margin:0; background:var(--bg); color:var(--fg); font-family:system-ui,Segoe UI,Roboto,Inter,sans-serif; overflow:hidden; }
+  /* wrapper a tutta pagina, centrato senza scroll (anche mobile) */
+  #app{ display:grid; place-items:center; width:100%; height:100svh; }
+  /* card di loading */
   .card{ max-width:min(740px,92vw); padding:24px; border-radius:14px; background:linear-gradient(180deg,#131722,#0b0c11); box-shadow:0 16px 60px rgba(0,0,0,.45); text-align:center }
   .muted{ color:var(--muted) }
   .spinner{ width:28px; height:28px; border-radius:50%; border:3px solid rgba(255,255,255,.18); border-top-color:#fff; animation:spin 1s linear infinite; margin:12px auto 0 }
   @keyframes spin{ to{ transform:rotate(360deg) } }
-  #hud{ position:fixed; inset:auto 12px 12px auto; background:rgba(0,0,0,.55); color:#fff; font:12px/1.3 ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; padding:8px 10px; border-radius:8px; backdrop-filter: blur(6px); display:none; white-space:pre; z-index:9999 }
+  /* iframe che contiene la pagina (isolata) */
+  #view{
+    width: min(1200px, 96vw);
+    height: min(96vh, 100svh);
+    border: 0;
+    border-radius: 18px;
+    background: var(--bg);
+    box-shadow: 0 16px 60px rgba(0,0,0,.45);
+    display:none; opacity:0; transition:opacity .28s ease;
+  }
+  #view.ready{ display:block; opacity:1; }
+  /* HUD debug */
+  #hud{ position:fixed; inset:auto 12px 12px auto; background:rgba(0,0,0,.55); color:#fff; font:12px/1.3 ui-monospace,monospace; padding:8px 10px; border-radius:8px; backdrop-filter: blur(6px); display:none; white-space:pre; z-index:9999 }
   #hud.show{ display:block }
-  #app{ display:grid; place-items:center; min-height:100vh; width:100%; opacity:0; transition: opacity .28s ease }
-  #app.ready{ opacity:1 }
-  /* Fallback: se la pagina iniettata usa .stage centrale, garantisci margine auto */
-  #app > .stage { margin:auto; }
 </style>
 </head>
 <body>
-  <div class="card" id="status">
-    <div style="font-weight:900; letter-spacing:.04em; text-transform:uppercase">Petriolese Calcio</div>
-    <h1 style="margin:.35em 0 .2em">Caricamento…</h1>
-    <div class="muted">Vista dinamica (countdown / lineup) con switch live</div>
-    <div class="spinner"></div>
+  <div id="app">
+    <div class="card" id="status">
+      <div style="font-weight:900; letter-spacing:.04em; text-transform:uppercase">Petriolese Calcio</div>
+      <h1 style="margin:.35em 0 .2em">Caricamento…</h1>
+      <div class="muted">Scelgo la vista giusta (countdown / lineup)</div>
+      <div class="spinner"></div>
+    </div>
+    <iframe id="view" title="Matchday"></iframe>
   </div>
-
-  <div id="app" role="main" aria-live="polite"></div>
   <pre id="hud"></pre>
 
 <script>
 /* ====== CONFIG ====== */
 const SHEET_FILE_ID = '1nWG0OBGpiyK-lulP-OKGad4jG7uEVmcy';
 const META_GID      = '254048258';
-// Incolla QUI l'URL "Pubblica sul web" della scheda Meta (opzionale ma consigliato)
-const PUBLISHED_META_URL = ''; 
+/* Incolla qui l’URL “Pubblica sul web” della scheda Meta come fallback CSV */
+const PUBLISHED_META_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSpJqXmoJaIznEo_EGHCfUxyYVWWKJCGULM9FbnI14hLhGpsjt3oMHT5ahJwEmJ4w/pubhtml';  // es: 'https://docs.google.com/spreadsheets/d/e/.../pubhtml?gid=254048258&single=true'
 
 const ROUTES = {
   countdown: 'countdown.html',
   lineup:    'lineup.html',
-  fulltime:  'fulltime.html',
-  post:      'post.html'
+  fulltime:  'fulltime.html'   // opzionale
 };
 
 const WINDOWS = {
-  countdown_to_lineup: 5 * 60 * 1000,
-  lineup_to_fulltime:  3 * 60 * 60 * 1000
+  countdown_to_lineup: 5 * 60 * 1000,   // -5 min da KO
+  lineup_to_fulltime:  3 * 60 * 60 * 1000  // +3h da KO
 };
 
-/* ====== HELPERS CSV ====== */
+/* ====== HELPERS (CSV Google) ====== */
 const gvizCsvURL=(fileId,gid)=>`https://docs.google.com/spreadsheets/d/${fileId}/gviz/tq?gid=${encodeURIComponent(gid)}&headers=1&tqx=out:csv`;
-// ulteriore fallback diretto (richiede file pubblico "chiunque con link")
 const exportCsvURL=(fileId,gid)=>`https://docs.google.com/spreadsheets/d/${fileId}/export?format=csv&id=${fileId}&gid=${encodeURIComponent(gid)}`;
 function pubCsvURL(pubhtmlUrl){
   try{
     const u=new URL(pubhtmlUrl);
     const gid=u.searchParams.get('gid')||'0';
-    const parts=u.pathname.split('/'); 
-    const idIdx=parts.findIndex(p=>p==='e')+1; 
+    const parts=u.pathname.split('/');
+    const idIdx=parts.findIndex(p=>p==='e')+1;
     const id=parts[idIdx]||'';
     const root=`${u.protocol}//${u.host}${parts.slice(0,idIdx).join('/')}/${id}`;
     return `${root}/pub?gid=${encodeURIComponent(gid)}&single=true&output=csv`;
   }catch(e){ return null; }
 }
 function parseCSV(text){
-  try{
-    let t=String(text||'').replace(/^\uFEFF/,'').replace(/\r\n?/g,'\n');
-    const lines=t.split('\n').filter((ln,i)=>i===0||ln.trim().length>0);
-    if(!lines.length) return [];
-    const rows=[]; let row=[],cur='',inQ=false;
-    const pushCell=()=>{row.push(cur);cur=''}; const pushRow=()=>{rows.push(row);row=[]};
-    const s=lines.join('\n');
-    for(let i=0;i<s.length;i++){
-      const c=s[i],n=s[i+1];
-      if(inQ){ if(c=='"'&&n=='"'){cur+='"';i++} else if(c=='"'){inQ=false} else cur+=c }
-      else{ if(c=='"') inQ=true; else if(c==',') pushCell(); else if(c=='\n'){pushCell();pushRow()} else cur+=c }
-    }
-    if(cur!==''||row.length){pushCell();pushRow()}
-    const header=(rows.shift()||[]).map(h=>String(h||'').trim());
-    return rows.map(r=>Object.fromEntries(header.map((h,i)=>[h, r[i]!==undefined?r[i]:'' ])));
-  }catch(e){ console.error('parseCSV error', e); return []; }
+  let t=String(text||'').replace(/^\uFEFF/,'').replace(/\r\n?/g,'\n');
+  const lines=t.split('\n').filter((ln,i)=>i===0||ln.trim().length>0);
+  if(!lines.length) return [];
+  const rows=[]; let row=[],cur='',inQ=false;
+  const pushCell=()=>{row.push(cur);cur=''}; const pushRow=()=>{rows.push(row);row=[]};
+  const s=lines.join('\n');
+  for(let i=0;i<s.length;i++){
+    const c=s[i],n=s[i+1];
+    if(inQ){ if(c=='"'&&n=='"'){cur+='"';i++} else if(c=='"'){inQ=false} else cur+=c }
+    else{ if(c=='"') inQ=true; else if(c==',') pushCell(); else if(c=='\n'){pushCell();pushRow()} else cur+=c }
+  }
+  if(cur!==''||row.length){pushCell();pushRow()}
+  const header=(rows.shift()||[]).map(h=>String(h||'').trim());
+  return rows.map(r=>Object.fromEntries(header.map((h,i)=>[h, r[i]!==undefined?r[i]:'' ])));
 }
 async function fetchCsvPrefer(fileId,gid,pubUrl){
-  // 1) gviz CSV
-  try{
-    const res=await fetch(gvizCsvURL(fileId,gid),{cache:'no-store'});
-    if(res.ok){ return parseCSV(await res.text()); }
-  }catch(e){ console.warn('gvizCsv fetch fail', e); }
-  // 2) published csv (se impostato)
-  try{
-    if(pubUrl){
-      const url = pubCsvURL(pubUrl);
-      if(url){
-        const res=await fetch(url,{cache:'no-store'});
-        if(res.ok){ return parseCSV(await res.text()); }
-      }
-    }
-  }catch(e){ console.warn('pubCsv fetch fail', e); }
-  // 3) export csv (se file è pubblico)
-  try{
-    const res=await fetch(exportCsvURL(fileId,gid),{cache:'no-store'});
-    if(res.ok){ return parseCSV(await res.text()); }
-  }catch(e){ console.warn('exportCsv fetch fail', e); }
+  try{ const r=await fetch(gvizCsvURL(fileId,gid),{cache:'no-store'}); if(r.ok) return parseCSV(await r.text()); }catch(e){}
+  if(pubUrl){ try{ const u=pubCsvURL(pubUrl); if(u){ const r=await fetch(u,{cache:'no-store'}); if(r.ok) return parseCSV(await r.text()); } }catch(e){} }
+  try{ const r=await fetch(exportCsvURL(fileId,gid),{cache:'no-store'}); if(r.ok) return parseCSV(await r.text()); }catch(e){}
   return [];
 }
 function normalizeMeta(rows){
   const m=new Map();
   rows.forEach(r=>{
-    // Supporta sia "Key/Value" che "Chiave/Valore" o altre varianti
     const keys = Object.keys(r);
-    const keyK = keys.find(k => /^(key|chiave)$/i.test(k)) || 'Key';
-    const valK = keys.find(k => /^(value|valore|valore|val)$/i.test(k)) || 'Value';
+    const keyK = keys.find(k => /^(key|chiave)$/i.test(k)) || keys[0];
+    const valK = keys.find(k => /^(value|valore|val)$/i.test(k)) || keys[1];
     const k=(''+(r[keyK]||'')).trim().toLowerCase();
     const v=(''+(r[valK]||'')).trim();
     if(k) m.set(k,v);
@@ -121,8 +110,7 @@ function normalizeMeta(rows){
   return m;
 }
 function parseDateTimeIT(dateStr, timeStr){
-  const s = String(dateStr||'').trim();
-  const t = String(timeStr||'').trim();
+  const s=String(dateStr||'').trim(), t=String(timeStr||'').trim();
   if(!s) return null;
   const combined = s.includes(':') ? s : (t ? `${s} ${t}` : s);
   const m1 = combined.match(/^(\d{1,2})[\/\-](\d{1,2})[\/\-](\d{4})(?:[ T](\d{1,2}):(\d{2}))?$/);
@@ -134,135 +122,24 @@ function parseDateTimeIT(dateStr, timeStr){
   return new Date(y,M,d,h,min,0,0);
 }
 
-/* ====== HEAD/BODY SPA LOADER ====== */
-function clearInjectedHead(){
-  document.querySelectorAll('head [data-spa-injected]').forEach(el=>el.remove());
-}
-function injectHead(fromDoc){
-  clearInjectedHead();
-  const head = document.head;
-  fromDoc.head.querySelectorAll('style').forEach(s=>{
-    const ns = document.createElement('style');
-    ns.setAttribute('data-spa-injected','');
-    ns.textContent = s.textContent;
-    head.appendChild(ns);
-  });
-  fromDoc.head.querySelectorAll('link[rel="stylesheet"]').forEach(l=>{
-    const nl = document.createElement('link');
-    for(const a of l.attributes){ nl.setAttribute(a.name, a.value); }
-    nl.setAttribute('data-spa-injected','');
-    head.appendChild(nl);
-  });
-  const fav = fromDoc.head.querySelector('link[rel~="icon"]');
-  if (fav){
-    const nl = document.createElement('link');
-    for(const a of fav.attributes){ nl.setAttribute(a.name, a.value); }
-    nl.setAttribute('data-spa-injected','');
-    head.appendChild(nl);
-  }
-  const t = fromDoc.querySelector('title');
-  if(t) document.title = t.textContent.trim();
-  return [...fromDoc.head.querySelectorAll('script')];
-}
-
-async function loadHTML(url){
-  const res = await fetch(url, { cache: 'no-store' });
-  if(!res.ok) throw new Error('Fetch failed: '+url+' ('+res.status+')');
-  return await res.text();
-}
-function parseDoc(html){
-  return new DOMParser().parseFromString(html, 'text/html');
-}
-async function mountDoc(doc){
-  const stopLoader = () => { const s=document.getElementById('status'); if(s) s.style.display='none'; };
-  const app = document.getElementById('app');
-  try{
-    const headScripts = injectHead(doc);
-    app.className = ''; // reset class copy
-    app.removeAttribute('style'); // reset inline style
-    // Copia layout base dal body target dentro #app (NON sul body principale)
-    const srcBody = doc.body;
-    if (srcBody.getAttribute('style')) app.setAttribute('style', srcBody.getAttribute('style'));
-    if (srcBody.className) app.className = srcBody.className;
-    // ma assicurati che #app resti grid+center del wrapper SPA
-    app.style.display = 'grid';
-    app.style.placeItems = 'center';
-    app.style.minHeight = '100vh';
-    app.classList.remove('ready');
-    app.style.opacity = '0';
-
-    const body = doc.body;
-    app.innerHTML = '';
-    [...body.childNodes].forEach(node=>{
-      if(!(node.tagName && node.tagName.toLowerCase()==='script')){
-        app.appendChild(node.cloneNode(true));
-      }
-    });
-
-    for(const s of headScripts){
-      const ns = document.createElement('script');
-      for(const a of s.attributes){ ns.setAttribute(a.name, a.value); }
-      if(!s.src){ ns.textContent = s.textContent; }
-      document.head.appendChild(ns);
-      if(ns.src && !ns.defer && !ns.async){
-        await new Promise((ok,ko)=>{ ns.onload=ok; ns.onerror=()=>ko(new Error('Head script load error: '+ns.src)); });
-      }
-    }
-    const bodyScripts = [...body.querySelectorAll('script')];
-    for(const s of bodyScripts){
-      const ns = document.createElement('script');
-      for(const a of s.attributes){ ns.setAttribute(a.name, a.value); }
-      if(!s.src){ ns.textContent = s.textContent; }
-      app.appendChild(ns);
-      if(ns.src && !ns.defer && !ns.async){
-        await new Promise((ok,ko)=>{ ns.onload=ok; ns.onerror=()=>ko(new Error('Body script load error: '+ns.src)); });
-      }
-    }
-    requestAnimationFrame(()=>{ app.classList.add('ready'); app.style.opacity='1'; });
-  }catch(e){
-    console.error('mountDoc error', e);
-    app.innerHTML = `<div class="card"><h2>⚠️ Errore caricamento</h2><div class="muted">${String(e.message||e)}</div></div>`;
-  }finally{
-    stopLoader();
-  }
-}
-
-/* ====== ROUTER LIVE ====== */
+/* ====== ROUTER (iframe) ====== */
 function decideRoute(now, kickoff){
-  const t  = kickoff.getTime();
-  const n  = now.getTime();
-  const T_minus_5m = t - WINDOWS.countdown_to_lineup;
-  const T_plus_3h  = t + WINDOWS.lineup_to_fulltime;
-  if (n < T_minus_5m) return 'countdown';
-  if (n < T_plus_3h)  return 'lineup';
-  return (ROUTES.fulltime) ? 'fulltime' : 'countdown';
+  const t=kickoff.getTime(), n=now.getTime();
+  const Tm5 = t - WINDOWS.countdown_to_lineup;
+  const Tp3 = t + WINDOWS.lineup_to_fulltime;
+  if (n < Tm5) return 'countdown';
+  if (n < Tp3) return 'lineup';
+  return 'fulltime' in ROUTES ? 'fulltime' : 'countdown';
 }
+let currentRoute=null, kickoffCache=null, boundaryTimer=null, pollTimer=null;
 
-let currentRoute = null;
-let kickoffCache = null;
-let metaPollTimer = null;
-let boundaryTimer = null;
-let pageCache = new Map();
-
-async function preload(url){
-  if(pageCache.has(url)) return pageCache.get(url);
-  try{
-    const html = await loadHTML(url);
-    const doc  = parseDoc(html);
-    const obj = { html, doc };
-    pageCache.set(url, obj);
-    return obj;
-  }catch(e){
-    console.warn('preload failed for', url, e);
-    return null;
-  }
-}
-async function loadRoute(route){
-  const url = ROUTES[route] || ROUTES.countdown;
-  const cached = await preload(url);
-  if(!cached){ throw new Error('Route not available: '+route); }
-  await mountDoc(cached.doc);
-  currentRoute = route;
+function setIframeSrc(url){
+  const status = document.getElementById('status');
+  const frame  = document.getElementById('view');
+  frame.classList.remove('ready');
+  status.style.display='block';
+  frame.onload = ()=>{ status.style.display='none'; frame.classList.add('ready'); };
+  frame.src = url;
 }
 
 function scheduleBoundaryCheck(){
@@ -272,22 +149,18 @@ function scheduleBoundaryCheck(){
   const tKO = kickoffCache.getTime();
   const t1  = tKO - WINDOWS.countdown_to_lineup;
   const t2  = tKO + WINDOWS.lineup_to_fulltime;
-  const upcoming = [t1, t2].filter(t=>t > now).sort((a,b)=>a-b)[0];
-  const delay = upcoming ? Math.max(500, Math.min(upcoming - now + 250, 30*60*1000)) : 30*60*1000;
-
-  boundaryTimer = setTimeout(async ()=>{
-    const routeNew = decideRoute(new Date(), kickoffCache);
-    if(routeNew !== currentRoute){
-      await preload(ROUTES[routeNew] || '');
-      await loadRoute(routeNew);
-    }
+  const upcoming = [t1,t2].filter(t=>t>now).sort((a,b)=>a-b)[0];
+  const delay = upcoming ? Math.max(500, Math.min(upcoming-now+250, 30*60*1000)) : 30*60*1000;
+  boundaryTimer = setTimeout(()=> {
+    const rNew = decideRoute(new Date(), kickoffCache);
+    if(rNew !== currentRoute){ currentRoute = rNew; setIframeSrc(ROUTES[rNew]); }
     scheduleBoundaryCheck();
   }, delay);
 }
 
-async function startMetaPolling(intervalMs=120000){
-  clearInterval(metaPollTimer);
-  metaPollTimer = setInterval(async ()=>{
+async function startMetaPolling(ms=120000){
+  clearInterval(pollTimer);
+  pollTimer = setInterval(async ()=>{
     try{
       const rows = await fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL);
       const meta = normalizeMeta(rows);
@@ -295,13 +168,12 @@ async function startMetaPolling(intervalMs=120000){
       const timeStr = (meta.get('ora') ||meta.get('prossimaora') ||meta.get('prossima_ora') ||'').toString().trim();
       const k = parseDateTimeIT(dateStr, timeStr);
       if(k && !isNaN(+k)){
-        if(!kickoffCache || Math.abs(k.getTime() - kickoffCache.getTime()) > 60*1000){
-          kickoffCache = k;
-          scheduleBoundaryCheck();
+        if(!kickoffCache || Math.abs(k.getTime() - kickoffCache.getTime()) > 60000){
+          kickoffCache = k; scheduleBoundaryCheck();
         }
       }
-    }catch(e){ console.warn('meta polling error', e); }
-  }, intervalMs);
+    }catch(e){}
+  }, ms);
 }
 
 (async function main(){
@@ -309,33 +181,27 @@ async function startMetaPolling(intervalMs=120000){
   const force  = (params.get('force')||'').toLowerCase();
   const debug  = params.get('debug') === '1';
 
-  // Leggi Meta iniziale (con più fallback)
-  let metaRows=[];
-  try{ metaRows = await fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL); }catch(e){ console.warn('meta read fail', e); }
-  if(!metaRows.length){
+  const hud = document.getElementById('hud');
+  const rows = await fetchCsvPrefer(SHEET_FILE_ID, META_GID, PUBLISHED_META_URL);
+  if(!rows.length){
     document.getElementById('status').innerHTML = `
       <div class="card">
         <h2>⚠️ Meta non raggiungibile</h2>
-        <div class="muted">Controlla condivisione/publishing dello Sheet o imposta PUBLISHED_META_URL nello script.</div>
+        <div class="muted">Controlla la pubblicazione CSV o incolla PUBLISHED_META_URL nello script.</div>
       </div>`;
     return;
   }
-
-  const meta    = normalizeMeta(metaRows);
+  const meta = normalizeMeta(rows);
   const dateStr = (meta.get('data')||meta.get('prossimadata')||meta.get('prossima_data')||'').toString().trim();
   const timeStr = (meta.get('ora') ||meta.get('prossimaora') ||meta.get('prossima_ora') ||'').toString().trim();
   const kickoff = parseDateTimeIT(dateStr, timeStr);
   if(kickoff && !isNaN(+kickoff)) kickoffCache = kickoff;
 
   let route = 'countdown';
-  if (force && ROUTES[force]) {
-    route = force;
-  } else if (kickoffCache) {
-    route = decideRoute(new Date(), kickoffCache);
-  }
+  if (force && ROUTES[force]) route = force;
+  else if (kickoffCache)      route = decideRoute(new Date(), kickoffCache);
 
   if (debug){
-    const hud = document.getElementById('hud');
     hud.textContent = [
       `FORCE:   ${force||'-'}`,
       `ROUTE:   ${route}`,
@@ -345,12 +211,11 @@ async function startMetaPolling(intervalMs=120000){
     hud.classList.add('show');
   }
 
-  await Promise.all([ preload(ROUTES.countdown), preload(ROUTES.lineup), preload(ROUTES.fulltime) ]);
-  await loadRoute(route);
-
+  setIframeSrc(ROUTES[route]);
   scheduleBoundaryCheck();
   startMetaPolling(120000);
 
+  // Mantieni root in barra
   try{ history.replaceState(null,'','./'); }catch(e){}
 })();
 </script>
